--- a/zajezdy.css
+++ b/zajezdy.css
@@ -43,7 +43,6 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
-
   height: 180px;
 }
 
@@ -53,7 +52,6 @@
   background-repeat: no-repeat;
   grid-column: 1/2;
   grid-row: 2/3;
-
   height: 180px;
   display: flex;
   flex-direction: column;
@@ -67,9 +65,7 @@
   background-repeat: no-repeat;
   grid-column: 3/4;
   grid-row: 1/2;
-
   height: 180px;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -82,7 +78,6 @@
   background-repeat: no-repeat;
   grid-column: 3/4;
   grid-row: 2/3;
-
   height: 180px;
   display: flex;
   flex-direction: column;
@@ -91,14 +86,13 @@
 }
 
 .zajezdy__cena {
-  color: white;
+  color: var(--nadpisy);
   border: 1px solid var(--hlavni);
   background-color: var(--hlavni);
   padding: 0.5rem;
-
   width: 95px;
 }
 
 .zajezdy__popis {
-    color: white;
-  }
+  color: var();
+}
