--- a/zajezdy.css
+++ b/zajezdy.css
@@ -9,76 +9,47 @@
 
 .zajezdy__velky--vlevo {
   background-image: url("podklady/palmy.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
 }
 
 .zajezdy__velky--vpravo {
   background-image: url("podklady/lodicka.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   grid-column: 2 / span 2;
   grid-row: 1 / span 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
 }
 
 .zajezdy__maly--vlevoNahore {
   background-image: url("podklady/podkova.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 300px;
   grid-column: 1/2;
   grid-row: 1/2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
   height: 180px;
 }
 
 .zajezdy__maly--vlevoDole {
   background-image: url("podklady/zatoka.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   grid-column: 1/2;
   grid-row: 2/3;
   height: 180px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
 }
 
 .zajezdy__maly--vpravoNahore {
   background-image: url("podklady/jezero.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   grid-column: 3/4;
   grid-row: 1/2;
   height: 180px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
 }
 
 .zajezdy__maly--vpravoDole {
   background-image: url("podklady/nakole.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   grid-column: 3/4;
   grid-row: 2/3;
   height: 180px;
+}
+
+.zajezdy__spolecne {
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -94,5 +65,5 @@
 }
 
 .zajezdy__popis {
-  color: var();
+  color: var(--nadpisy);
 }
